@@ -1,59 +1,113 @@
-# 🎯 Quoridor Game
+# Quoridor JavaFX - Installation et Compilation Complète (Windows, Linux, macOS)
 
-Un jeu Quoridor complet développé en JavaFX avec interface graphique moderne, IA intégrée, et système de distribution automatique.
-
-## 🚀 Installation Rapide (Joueurs)
-
-**Super Simple :**
-1. Téléchargez `download-and-play.bat`
-2. Double-cliquez dessus
-3. Le jeu se télécharge et se lance automatiquement !
-
-## 🎮 Fonctionnalités
-
-- **Interface Moderne**: Design élégant avec thèmes personnalisables
-- **Multijoueur**: Support 2 à 4 joueurs (humains et IA)
-- **IA Avancée**: Plusieurs niveaux de difficulté
-- **Audio Immersif**: Playlist musicale et effets sonores
-- **Sauvegarde**: Système de sauvegarde automatique
-- **Backgrounds Animés**: Arrière-plans dynamiques
-- **Distribution Automatique**: Installation en un clic
-
-## 🔧 Développement
-
-### Workflow Ultra-Simple
-```bash
-# 1. Testez votre code
-mvn clean javafx:run
-
-# 2. Créez une release complète
-./cross-platform-release.sh
-
-# 3. Upload sur GitHub (manuel)
-# 4. Partagez download-and-play.bat avec vos joueurs !
-```
-
-**C'est tout ! 🎉**
-
-Voir `QUICK-GUIDE.md` pour plus de détails.
-
-## 🎯 Règles du Jeu
-
-Le Quoridor est un jeu de stratégie où le but est d'atteindre le côté opposé du plateau avant vos adversaires.
-
-### Règles de Base
-- **Mouvement**: Un pion par tour (orthogonal uniquement)
-- **Saut**: Si un pion bloque, sautez par-dessus (si possible)
-- **Contournement**: Si saut impossible, mouvement diagonal autorisé
-- **Murs**: Chaque joueur a 10 murs pour bloquer les adversaires
-- **Victoire**: Premier à atteindre son côté opposé
-
-## 🏆 Crédits
-
-- **Développement**: DRYT Team
-- **Distribution**: Système automatisé GitHub
-- **Repository**: https://github.com/devamadushan/Quoridor
+Ce guide explique comment configurer un environnement Java/Maven complet sur Windows, Linux et macOS, compiler le projet Quoridor, et l'exécuter.
 
 ---
 
-**Bon jeu ! 🎮**
+##  Étape 1 : Installer Java (JDK 21)
+
+### Windows
+1. Télécharger Java JDK 21 : https://jdk.java.net/21/
+2. Installer le JDK (ex. `C:\Program Files\Java\jdk-21`)
+3. Variables d'environnement :
+   - JAVA_HOME : `C:\Program Files\Java\jdk-21`
+   - Ajouter `%JAVA_HOME%\bin` à `Path`
+4. Vérification :
+```bash
+java -version
+javac -version
+```
+
+### Linux (Ubuntu/Debian)
+```bash
+sudo apt update
+sudo apt install openjdk-21-jdk
+java -version
+```
+
+### macOS
+```bash
+brew install openjdk@21
+sudo ln -sfn /opt/homebrew/opt/openjdk@21 /Library/Java/JavaVirtualMachines/openjdk-21.jdk
+```
+Ajouter à votre shell (zsh/bash) :
+```bash
+export JAVA_HOME="/opt/homebrew/opt/openjdk@21"
+export PATH="$JAVA_HOME/bin:$PATH"
+```
+
+---
+
+## Étape 2 : Installer Maven
+
+### Windows
+1. Télécharger : https://maven.apache.org/download.cgi
+2. Extraire (ex. `C:\maven\apache-maven-3.9.6`)
+3. Variables d'environnement :
+   - M2_HOME : `C:\maven\apache-maven-3.9.6`
+   - Ajouter `%M2_HOME%\bin` à `Path`
+4. Vérification :
+```bash
+mvn -version
+```
+
+### Linux
+```bash
+sudo apt install maven
+mvn -version
+```
+
+### macOS
+```bash
+brew install maven
+mvn -version
+```
+
+---
+
+## Étape 3 : Télécharger le projet
+
+1. Télécharger l’archive `Quoridor-main.zip`
+2. Extraire-la dans un dossier, par exemple `~/Quoridor-main`
+
+---
+
+##  Étape 4 : Compiler le projet
+
+```bash
+cd ~/Quoridor-main
+mvn clean install
+```
+
+Résultat attendu : `target/Quoridor-1.0.2.jar`
+
+---
+
+##  Étape 5 : Exécuter l'application
+
+### Option 1 : via Maven
+```bash
+mvn javafx:run
+```
+
+### Option 2 : via le JAR
+
+#### Windows
+```bash
+java -jar target/Quoridor-1.0.2.jar
+```
+(Si erreur JavaFX)
+```bash
+java --module-path C:/chemin/javafx-sdk-21/lib \
+     --add-modules javafx.controls,javafx.fxml \
+     -jar target/Quoridor-1.0.2.jar
+```
+
+#### Linux/macOS
+```bash
+java --module-path /chemin/javafx-sdk-21/lib \
+     --add-modules javafx.controls,javafx.fxml \
+     -jar target/Quoridor-1.0.2.jar
+```
+
+---
